# megano_django

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  readme.txt
megano/diploma-frontend/frontend/: urls.py
megano/megano_backend/: db.sqlite3  manage.py
megano/megano_backend/auth_api/: admin.py  middlewares.py  models.py  serializers.py  test.py  tests.py  urls.py  views.py
megano/megano_backend/auth_api/fixtures/: auth.json  user.json
megano/megano_backend/auth_api/migrations/: 0001_initial.py
megano/megano_backend/basket_api/: apps.py  serializers.py  urls.py  views.py
megano/megano_backend/catalog_api/: admin.py  models.py  pagination.py  serializers.py  urls.py  views.py
megano/megano_backend/catalog_api/migrations/: 0001_initial.py  0002_subcategory.py  0003_alter_subcategory_parent.py
megano/megano_backend/config_data/: config.py
megano/megano_backend/custom_index/: apps.py  forms.py  serializers.py  urls.py  views.py
megano/megano_backend/diplomasite/: asgi.py  settings.py  urls.py  wsgi.py
megano/megano_backend/orders_api/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
megano/megano_backend/orders_api/fixtures/: orders.json
megano/megano_backend/orders_api/migrations/: 0001_initial.py  (+9 more)
megano/megano_backend/product_api/: admin.py  models.py  pagination.py  serializers.py  tests.py  urls.py  views.py
megano/megano_backend/profile_api/: admin.py  models.py  serializers.py  urls.py  views.py
megano/megano_backend/tags_api/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
(+48 files in other folders)
